fixed page shifting when gifs load

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+html { 
+  margin-left: calc(100vw - 100%); 
+}
+
 body {
   background-color: rgb(25, 25, 25);
 }
